2008-10-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.mdp: Remove WindowsApplication reference.

2008-10-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj: Surround paths in build events with quotes.  Fix from
	Dmitry Radkovsky.

2008-10-15  Johnny Jacob  <jjohnny@novell.com>

	* src/Backends/Hiveminder/HmPreferencesWidget.cs: Removed references to 
	OAuth. Fixes build break.

2008-10-15  Johnny Jacob  <jjohnny@novell.com>

	* src/Makefile.am, configure.ac, tasque.mdp:  Project & Makefile
	changes

2008-10-15  Johnny Jacob  <jjohnny@novell.com>

	* src/Backends/Hiveminder/* : Added. Initial commit for Hiveminder
	Backend.
	
2008-10-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj:
	* tasque.sln:
	* RtmNet/RtmNet.csproj: Split RtmNet code into its own project.
	* RtmNet/AssemblyInfo.cs: Set CLSCompliant to True again.

2008-10-11  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj: Change output type to WinExe to prevent DOS window.

2008-10-11  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* configure.ac: Correct handling of "--enable" flags.  Fixes bug
	#555921, patch courtesy of Romain Tartière.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Add comment about need for review.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Accidentally committed Alex Launi's patch for
	  bug #555028, which adds a bunch of really useful dbus methods:
	  GetTaskIds, GetNameForTaskById, GetCategoryForTaskById,
	  GetStateForTaskById, and MarkTaskAsCompleteById.  In this commit I'm
	  commenting-out MarkTaskAsCompleteById because it still needs to be
	  reviewed.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.mdp: WindowsApplication -> GtkApplication

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskGroup.cs:
	* src/Utilities.cs:
	* src/TaskWindow.cs:
	* src/Preferences.cs:
	* src/Application.cs: